@@ -1,3 +1,8 @@
+2000-09-05  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
+
+	* gthread.c (g_thread_error_quark): Don't use a G_LOCK, as it
+	isn't necessary.
+
 2000-09-01  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
 
 	* gstring.c (g_string_free): Use g_return_val_if_fail instead of
